--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				<span class = "upper name_block t_left mr_l_34">
 				Men
 				<span class = "choice_products">
-					<span>1/5</span>
+					<span><span class = "show_d">1</span>/4</span>
 					<img class = "dinamic_block_left" src="img/line_left.png">
 					<img class = "dinamic_block_right" src="img/line_right.png">
 				</span>
@@ -248,7 +248,7 @@
 				<span class = "upper name_block_second t_right mr_l_34 mr_r_29">
 				Women
 					<span class = "choice_products_second">
-						<span>1/5</span>
+						<span><span class = "show_d" style = "margin-right: 3px">1</span>/3</span>
 						<img class = "dinamic_block_left" src="img/line_left.png">
 						<img class = "dinamic_block_right" src="img/line_right.png">
 					</span>
