--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
 	<title>Браслеты</title>
 	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/media_style.css">
 </head>
 <body>
 	<header>
 		<div class = "container"> 
 			<nav>
-				<img class = "left" src = "img/logo.png"/>
+				<img class = "left logo_t" src = "img/logo.png"/>
 				<ul class = "right header_menu">
 					<li><a class = "white_t" href = "">Home</a></li>
 					<li><a class = "white_t" href = "">Products</a></li>
