--- a/index.html
+++ b/index.html
@@ -448,6 +448,38 @@
 			<div class = "clear"></div>
 		</div>
 	</footer>
+
+
+
+
+
+
+
+
+	<!-- form bay -->
+
+	<section class = "window-form">
+		<div class = "container">
+			<form class="form_buy">
+				<p>Авторизация</p>
+				<input type="text" name="name" placeholder="Имя">
+				<input type="text" name="name" placeholder="Почтовый индекс">
+				<input type="phone" name="phone" placeholder="Мобильный телефон">
+				<input type="email" name="email" placeholder="Email">
+				<input type="address" name="address" placeholder="Адрес">
+				<input class = "f-r-button" type="submit" name="Отправить">
+			</form>
+		</div>
+	</section>
+
+
+
+
+
+
+
+
+
 	<script type="text/javascript" src = "js/script.js"></script>
 </body>
 </html>
