--- a/index.html
+++ b/index.html
@@ -119,7 +119,14 @@
 					<div class = "clear"></div>
 					<button class = "overview about_product">Описание</button>
 					<div class = "about_product_list_non">
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
+						<p class = "about_product_list_non_par">Натуральный жемчуг – один из самых уникальных ювелирных камней. Природа преподнесла в подарок людям готовый декоративный продукт, поверхность которого не требует дополнительной обработки. Он настолько женственен, благодаря мягкости оттенков и блеска, что древние римляне посвятили его Венере
+						.</p>
+						<div class = "trans_mini_block">
+							<img class = "trans_mini" src = "img/product_1.png"/>
+						</div>
+						<div class = "trans_mini_block">
+							<img class = "trans_mini" src = "img/product_1.png"/>
+						</div>
 					</div>
 					<button class = "take_basket">В корзину</button>
 				</div>
@@ -155,7 +162,13 @@
 					<div class = "clear"></div>
 					<button class = "overview about_product">Описание</button>
 					<div class = "about_product_list_non">
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
+						<p class = "about_product_list_non_par">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
+						<div class = "trans_mini_block">
+							<img class = "trans_mini" src = "img/product_1.png"/>
+						</div>
+						<div class = "trans_mini_block">
+							<img class = "trans_mini" src = "img/product_1.png"/>
+						</div>
 					</div>
 					<button class = "take_basket">В корзину</button>
 				</div>
@@ -196,7 +209,13 @@
 					<div class = "clear"></div>
 					<button class = "overview about_product">Описание</button>
 					<div class = "about_product_list_non">
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
+						<p class = "about_product_list_non_par">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
+						<div class = "trans_mini_block">
+							<img class = "trans_mini" src = "img/product_1.png"/>
+						</div>
+						<div class = "trans_mini_block">
+							<img class = "trans_mini" src = "img/product_1.png"/>
+						</div>
 					</div>
 					<button class = "take_basket">В корзину</button>
 				</div>
@@ -235,7 +254,13 @@
 					<div class = "clear"></div>
 					<button class = "overview about_product">Описание</button>
 					<div class = "about_product_list_non">
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
+						<p class = "about_product_list_non_par">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
+						<div class = "trans_mini_block">
+							<img class = "trans_mini" src = "img/product_1.png"/>
+						</div>
+						<div class = "trans_mini_block">
+							<img class = "trans_mini" src = "img/product_1.png"/>
+						</div>
 					</div>
 					<button class = "take_basket">В корзину</button>
 				</div>
@@ -289,7 +314,13 @@
 					<div class = "clear"></div>
 					<button class = "overview about_product">Описание</button>
 					<div class = "about_product_list_non">
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
+					<p class = "about_product_list_non_par">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
+						<div class = "trans_mini_block">
+							<img class = "trans_mini" src = "img/product_1.png"/>
+						</div>
+						<div class = "trans_mini_block">
+							<img class = "trans_mini" src = "img/product_1.png"/>
+						</div>
 					</div>
 					<button class = "take_basket">В корзину</button>
 				</div>
@@ -324,7 +355,13 @@
 					<div class = "clear"></div>
 					<button class = "overview about_product">Описание</button>
 					<div class = "about_product_list_non">
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
+						<p class = "about_product_list_non_par">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
+						<div class = "trans_mini_block">
+							<img class = "trans_mini" src = "img/product_1.png"/>
+						</div>
+						<div class = "trans_mini_block">
+							<img class = "trans_mini" src = "img/product_1.png"/>
+						</div>
 					</div>
 					<button class = "take_basket">В корзину</button>
 				</div>
@@ -360,7 +397,13 @@
 					<div class = "clear"></div>
 					<button class = "overview about_product">Описание</button>
 					<div class = "about_product_list_non">
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
+						<p class = "about_product_list_non_par">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
+						<div class = "trans_mini_block">
+							<img class = "trans_mini" src = "img/product_1.png"/>
+						</div>
+						<div class = "trans_mini_block">
+							<img class = "trans_mini" src = "img/product_1.png"/>
+						</div>
 					</div>
 					<button class = "take_basket">В корзину</button>
 				</div>
@@ -461,13 +504,30 @@
 	<section class = "window-form">
 		<div class = "container">
 			<form class="form_buy">
-				<p>Авторизация</p>
-				<input type="text" name="name" placeholder="Имя">
-				<input type="text" name="name" placeholder="Почтовый индекс">
-				<input type="phone" name="phone" placeholder="Мобильный телефон">
-				<input type="email" name="email" placeholder="Email">
-				<input type="address" name="address" placeholder="Адрес">
-				<input class = "f-r-button" type="submit" name="Отправить">
+				<img class = "form_buy_cross" src="img/cross2.png" alt = "cross">
+
+				<div class = "form_buy_in">
+
+					<p>Авторизация</p>
+
+
+					<input type="text" name="name" placeholder="Имя">
+					<input type="text" name="name" placeholder="Почтовый индекс">
+					<input type="phone" name="phone" placeholder="Мобильный телефон">
+					<input type="email" name="email" placeholder="Email">
+					<input type="address" name="address" placeholder="Адрес">
+					<input class = "f-r-button" type="submit" name="Отправить">
+
+				</div>
+
+				<div class = "form_buy_pr">
+
+					<p>Товары</p>
+
+					<div class="product_for_basket"><div class="pro_photo"><img src="file:///C:/Users/%D0%92%D0%BB%D0%B0%D0%B4/Desktop/%D1%81%D0%B0%D0%B9%D1%82%20%D0%B4%D0%BB%D1%8F%20%D1%81%D0%B2%D0%BE%D0%B5%D0%B3%D0%BE%20%D0%91%D0%B8%D0%B7%D0%BD%D0%B5%D1%81%D0%B0/img/product_1.png"></div><span class="upper color_pro">T-shirt</span><span class="upper price_pro">5,00€</span><span class="upper size_pro">size</span><span class="cross"></span><label><input name="color_circle" type="radio"><i class="gray"></i></label></div>
+
+				</div>
+
 			</form>
 		</div>
 	</section>
