--- a/index.html
+++ b/index.html
@@ -524,7 +524,59 @@
 
 					<p>Товары</p>
 
-					<div class="product_for_basket"><div class="pro_photo"><img src="file:///C:/Users/%D0%92%D0%BB%D0%B0%D0%B4/Desktop/%D1%81%D0%B0%D0%B9%D1%82%20%D0%B4%D0%BB%D1%8F%20%D1%81%D0%B2%D0%BE%D0%B5%D0%B3%D0%BE%20%D0%91%D0%B8%D0%B7%D0%BD%D0%B5%D1%81%D0%B0/img/product_1.png"></div><span class="upper color_pro">T-shirt</span><span class="upper price_pro">5,00€</span><span class="upper size_pro">size</span><span class="cross"></span><label><input name="color_circle" type="radio"><i class="gray"></i></label></div>
+					<div class = "form_buy_pr_product">
+						<div class = "form_buy_pr_product_show">
+							<img class = "form_buy_pr_product_show_photo" src="img/product_1.png" alt="">
+							<span class = "form_buy_pr_product_show_circle"></span>
+						</div>
+
+						<div class = "form_buy_pr_cross">
+							<img class = "form_buy_pr_cross_ph" src="img/cross.png">
+						</div>
+						<div class = "form_buy_pr_product_info">
+							<span class = "form_buy_pr_product_info_name">T-shirt</span>
+							<span class = "form_buy_pr_product_info_size">size</span>
+							<span class = "form_buy_pr_product_info_price">5,00€</span>
+						</div>
+
+						<div class="clear"></div>
+					</div>
+
+					<div class = "form_buy_pr_product">
+						<div class = "form_buy_pr_product_show">
+							<img class = "form_buy_pr_product_show_photo" src="img/product_1.png" alt="">
+							<span class = "form_buy_pr_product_show_circle"></span>
+						</div>
+
+						<div class = "form_buy_pr_cross">
+							<img class = "form_buy_pr_cross_ph" src="img/cross.png">
+						</div>
+						<div class = "form_buy_pr_product_info">
+							<span class = "form_buy_pr_product_info_name">T-shirt</span>
+							<span class = "form_buy_pr_product_info_size">size</span>
+							<span class = "form_buy_pr_product_info_price">5,00€</span>
+						</div>
+
+						<div class="clear"></div>
+					</div>
+
+					<div class = "form_buy_pr_product">
+						<div class = "form_buy_pr_product_show">
+							<img class = "form_buy_pr_product_show_photo" src="img/product_1.png" alt="">
+							<span class = "form_buy_pr_product_show_circle"></span>
+						</div>
+
+						<div class = "form_buy_pr_cross">
+							<img class = "form_buy_pr_cross_ph" src="img/cross.png">
+						</div>
+						<div class = "form_buy_pr_product_info">
+							<span class = "form_buy_pr_product_info_name">T-shirt</span>
+							<span class = "form_buy_pr_product_info_size">size</span>
+							<span class = "form_buy_pr_product_info_price">5,00€</span>
+						</div>
+
+						<div class="clear"></div>
+					</div>
 
 				</div>
 
