--- a/index.html
+++ b/index.html
@@ -472,6 +472,7 @@
 		<span>“ E-commerce psd theme available ”</span>
 		</div>
 	</section>
+
 	<footer>
 		<div class = "container">
 			<div class = "left">
@@ -493,12 +494,6 @@
 	</footer>
 
 
-
-
-
-
-
-
 	<!-- form bay -->
 
 	<section class = "window-form">
@@ -516,6 +511,21 @@
 					<input type="phone" name="phone" placeholder="Мобильный телефон">
 					<input type="email" name="email" placeholder="Email">
 					<input type="address" name="address" placeholder="Адрес">
+
+
+					<div class = "form_buy_in_block">
+						<button class = "form_buy_in_price">5 заказаныx товаров</button>
+						<button class = "form_buy_in_bay">ВСЕГО : 300$</button>
+					</div>
+
+
+
+					<div class = "form_buy_in_op">
+						<p class = "form_buy_in_op_description">
+							Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+						</p>
+					</div>
+
 					<input class = "f-r-button" type="submit" name="Отправить">
 
 				</div>
@@ -575,9 +585,10 @@
 							<span class = "form_buy_pr_product_info_price">5,00€</span>
 						</div>
 
+
 						<div class="clear"></div>
 					</div>
-
+					<p class = 'form_buy_pr_cross_pr'>Всего: 345€</p>
 				</div>
 
 			</form>
